--- a/src/template.html
+++ b/src/template.html
@@ -8,12 +8,15 @@
 <body>
     <header>
         <nav>
-            <button>Home</button>
-            <button>Menu</button>
-            <button>About</button>
+            <button class="home-button">Home</button>
+            <button class="menu-button">Menu</button>
+            <button class="about-button">About</button>
         </nav>
     </header>
-    <div id="content"></div>
+    <div id="content">
+        
+    </div>
+
 
 </body>
 </html>
